After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736802 - libnm: fix nm_access_point_get_ssid() return value
libnm: fix nm_access_point_get_ssid() return value
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: API
unspecified
Other All
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-09-17 13:37 UTC by Dan Winship
Modified: 2014-09-19 18:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libnm: fix nm_access_point_get_ssid() return value (1.58 KB, patch)
2014-09-17 13:37 UTC, Dan Winship
accepted-commit_now Details | Review
tui,examples: accept null SSID gracefully (2.96 KB, patch)
2014-09-19 08:35 UTC, Jiri Klimes
none Details | Review

Description Dan Winship 2014-09-17 13:37:17 UTC
nm_access_point_get_ssid() used to return NULL if the AP didn't have a
visible SSID. This got broken in the NM_TYPE_SSID -> G_TYPE_BYTES
change. Fix that. (Fixes a crash in nmtui and nmcli with SSID-less
APs.)
Comment 1 Dan Winship 2014-09-17 13:37:19 UTC
Created attachment 286375 [details] [review]
libnm: fix nm_access_point_get_ssid() return value
Comment 2 Jiri Klimes 2014-09-19 08:29:45 UTC
Review of attachment 286375 [details] [review]:

The patch is fine.
Comment 3 Jiri Klimes 2014-09-19 08:35:00 UTC
Created attachment 286597 [details] [review]
tui,examples: accept null SSID gracefully

nmcli uses nm_access_point_get_ssid() in two places that are safe. nmtui uses the function in 3 places, one needs fixing. And there are two occurences that need fixing in get-ap-info-libnm.c example.
Comment 4 Dan Winship 2014-09-19 13:09:22 UTC
committed both patches