libnm: fix nm_access_point_get_ssid() return value

nm_access_point_get_ssid() used to return NULL if the AP didn't have a
visible SSID. This got broken in the NM_TYPE_SSID -> G_TYPE_BYTES
change. Fix that. (Fixes a crash in nmtui and nmcli with SSID-less
APs.)

https://bugzilla.gnome.org/show_bug.cgi?id=736802